crates/aven-check/tests/fixtures/check/valid/comptime-pick.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }
pick = (o: {..r}, @keys: keysOf(r)[]) => { keys -> k; (k, o[k]) }
result : { name: Text, email: Text } = pick(user, @{"name", "email"})
