crates/aven-check/tests/fixtures/check/invalid/comptime-pick-out-of-domain.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }
pick = (o: {..r}, @keys: keysOf(r)[]) => { keys -> k; (k, o[k]) }
result : { name: Text, phone: Text } = pick(user, @{"name", "phone"})
